# useSTCP

./: CMakeLists.txt  README.md  main.cpp
Documentacao/html/: _company_8h_source.html  _graph_line_8h_source.html  _graph_maker_8h_source.html  annotated.html  class_company-members.html  class_company.html  class_graph-members.html  class_graph.html  class_graph_line-members.html  class_graph_line.html  class_graph_maker-members.html  class_graph_maker.html  class_min_heap-members.html  class_min_heap.html  classes.html  dir_2254ed4c86842eb07fcb8e0eac2ef2c8.html  dir_3c9f3ed66bc349525b536302ffbe5a4f.html  dir_4d7be947362df13686123d6563352e9b.html  dir_95e29a8b8ee7c54052c171a88bb95675.html  dir_cb8aebdcbcd7898634ff25bad2892a2f.html  dir_f89abcb304c928c7d889aa5625570de5.html  files.html  graph_8h_source.html  index.html  md__r_e_a_d_m_e.html  min_heap_8h_source.html  pages.html
Documentacao/html/search/: all_1.js
Documentacao/latex/: _company_8h_source.tex  _graph_line_8h_source.tex  _graph_maker_8h_source.tex  annotated.tex  class_company.tex  class_graph.tex  class_graph_line.tex  class_graph_maker.tex  class_min_heap.tex  files.tex  graph_8h_source.tex  md__r_e_a_d_m_e.tex  min_heap_8h_source.tex  refman.tex
codigo/: Company.cpp  Company.h  GraphLine.cpp  GraphLine.h  GraphMaker.cpp  GraphMaker.h  disjointSets.h  graph.cpp  graph.h  main.cpp  minHeap.h
